--- a/webapp/templates/pages/index.html
+++ b/webapp/templates/pages/index.html
@@ -1,37 +1,52 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-<html >
+<html>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Todo List</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
+        <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.9.0.js"></script>
         <script type="text/javascript" src="{% static "js/app.js" %}"></script>
         <script type="text/javascript" src="{% static "js/todoCtrl.js" %}"></script>
+        <script type="text/javascript" src="{% static "js/addTaskCtrl.js" %}"></script>
         <link rel="stylesheet" href="{% static "css/crowdcomms.css" %}">
         <link rel="stylesheet" href="{% static "css/table.css" %}">
-
+        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     </head>
     {% verbatim %}
-    <body ng-app="todoApp">
+    <body ng-app="todoApp" ng-controller="todoCtrl">
         <div  class="ccHeader">
-            <div class="ccTitle">CrowdComms Todo List Gilson Dias <Code Challenge> </div>
+            <div class="ccTitle">CrowdComms Todo List Gilson Dias</div>
         </div>
         <div class="addNewTodo">
-            <label>Title:</label><input type="text">
-            <label>Description:</label><textarea></textarea>
-            <label>Priority/:</label>
-            <select>
-                <option value="1">Low</option>
-                <option value="2">Medium</option>
-                <option value="3">Righ</option>
-                <option value="4">Urgent</option>
-            </select>
-            <input type="button" value="Add New Task" ng-click="" class="large blue button"/>
+            <div style="position: absolute;left: 10px;">
+                <table>
+                    <tr>
+                        <td>
+                            Status:
+                            <select id="statusFilter" name="statusFilter" ng-model="statusFilter">
+                                <option value="" selected>--Please Select--</option>
+                                <option ng-repeat="status in listStatus.availableStatus" value="{{status.id}}">{{status.name}}</option>
+                            </select>
+                        </td>
+                        <td>
+                            Priority:
+                            <select id="priorityFilter" name="priorityFilter" ng-model="priorityFilter">
+                                <option value="" selected>>--Please Select--<</option>
+                                <option ng-repeat="priority in listPriority.availablePriority" value="{{priority.id}}">{{priority.name}}</option>
+                            </select>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <input type="button" value="Add New Task" ng-click="showAddModal()" class="large blue button"/>
+            </div>
         </div>
         <div style="height: 15px; width: 100%"></div>
         <!--listing todo tasks-->
-         <div ng-controller="todoCtrl" class="divTable">
+         <div  class="divTable">
             <div class="table">
                 <div class="row header">
                     <div class="cell" style="width: 10%">
@@ -50,7 +65,7 @@
                         &nbsp;
                     </div>
                 </div>
-                <div class="row tableRow{{ to.priority }}" ng-repeat="to in todo">
+                <div class="row tableRow{{ to.priority }}" ng-repeat="to in todo | filter:filterTableStatus | filter:filterTablePriority">
                     <div class="cell" data-title="Priority" style="width: 10%">
                         <li class="priority{{ to.priority }}"></li>
                     </div>
