--- a/webapp/templates/pages/modal-add-task.html
+++ b/webapp/templates/pages/modal-add-task.html
@@ -1,33 +1,48 @@
-<div class="modal-header">
-    <h3>Create A New Account!</h3>
-</div>
-<form name="form.userForm" ng-submit="submitForm()" novalidate>
-    <div class="modal-body">
-        <!-- NAME -->
-        <div class="form-group">
-            <label>Name</label>
-            <input type="text" name="name" class="form-control" ng-model="name" required>
-            <p ng-show="form.userForm.name.$invalid && !form.userForm.name.$pristine" class="help-block">You name is required.</p>
-        </div>
 
-        <!-- USERNAME -->
-        <div class="form-group">
-            <label>Username</label>
-            <input type="text" name="username" class="form-control" ng-model="user.username" ng-minlength="3" ng-maxlength="8" required>
-            <p ng-show="form.userForm.username.$error.minlength" class="help-block">Username is too short.</p>
-            <p ng-show="form.userForm.username.$error.maxlength" class="help-block">Username is too long.</p>
-        </div>
-
-        <!-- EMAIL -->
-        <div class="form-group">
-            <label>Email</label>
-            <input type="email" name="email" class="form-control" ng-model="email" required>
-            <p ng-show="form.userForm.email.$invalid && !form.userForm.email.$pristine" class="help-block">Enter a valid email.</p>
-        </div>
-
+    <div class="clearfix">
+        <div class="modal-header model-grey-color">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancelModal()">
+                <span aria-hidden="true">×</span>
+            </button>
+            <h4 class="modal-title">New Task</h4>
+      </div>
+      <div class="modal-body">
+          <form class="form-horizontal" role="form">
+              <div class="form-group">
+                  <label class="col-sm-3 control-label">Title</label>
+                  <div class="col-sm-8">
+                      <input type="text" id="idtitle" required name="idtitle" ng-model="idtitle" placeholder="--Insert a Title--" class="form-control">
+                  </div>
+             </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">Description</label>
+                <div class="col-sm-8">
+                   <input type="text" required  id="iddescription" ng-model="iddescription" ng-mi placeholder="--Insert a Description--" class="form-control">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">Priority</label>
+                <div class="col-sm-8">
+                   <select id="idPriority" name="idPriority" ng-model="idPriority" required >
+                        <option value="" selected>--Please Select--</option>
+                       <option value="1" selected>Low</option>
+                       <option value="2" selected>Medium</option>
+                       <option value="3" selected>High</option>
+                       <option value="4" selected>Urgent</option>
+                   </select><br>
+                    <span>{{idPriority.id}}</span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">Deadline</label>
+                <div class="col-sm-8">
+                   <input id="iddeadline" required type="datetime-local" ng-model="iddeadline" class="form-control">
+                </div>
+            </div>
+          </form>
+      </div>
+      <div class="modal-footer model-grey-color">
+        <button class="btn btn-success" ng-click="addTask()" ng-disabled="!idtitle || !iddescription.length || iddeadline.$invalid"><i class="glyphicon glyphicon-floppy-save"></i> Save</button>
+        <button class="btn btn-danger" ng-click="cancelModal()"><i class="glyphicon glyphicon-remove"></i> Close</button>
+      </div>
     </div>
-    <div class="modal-footer">
-        <button type="submit" class="btn btn-primary" ng-disabled="form.userForm.$invalid">OK</button>
-        <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
-    </div>
-</form>
