--- a/webapp/templates/pages/modal-edit-task.html
+++ b/webapp/templates/pages/modal-edit-task.html
@@ -10,38 +10,48 @@
           <div class="form-group">
               <label class="col-sm-3 control-label">Title</label>
               <div class="col-sm-8">
-                  <input type="text" id="title" required name="title" ng-model="title" class="form-control">
+                  <input type="text" id="title" required name="title" ng-model="taskEdit.title" class="form-control">
               </div>
          </div>
         <div class="form-group">
             <label class="col-sm-3 control-label">Description</label>
             <div class="col-sm-8">
-               <input type="text" required  id="iddescription" ng-model="iddescription" ng-mi placeholder="--Insert a Description--" class="form-control">
+               <input type="text" required id="text" ng-model="taskEdit.text" class="form-control">
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-3 control-label">Priority</label>
             <div class="col-sm-8">
-               <select id="idPriority" name="idPriority" ng-model="idPriority" required >
+               <select id="idPriority" name="idPriority" ng-model="taskEdit.priority" required >
                     <option value="" selected>--Please Select--</option>
                    <option value="1" selected>Low</option>
                    <option value="2" selected>Medium</option>
                    <option value="3" selected>High</option>
                    <option value="4" selected>Urgent</option>
                </select><br>
-                <span>{{idPriority.id}}</span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-3 control-label">Status</label>
+            <div class="col-sm-8">
+               <select id="status" name="status" ng-model="taskEdit.status" required >
+                   <option value="" selected>--Please Select--</option>
+                   <option value="1" selected>Open</option>
+                   <option value="2" selected>In Progress</option>
+                   <option value="3" selected>Finished</option>
+               </select><br>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-3 control-label">Deadline</label>
             <div class="col-sm-8">
-               <input id="iddeadline" required type="datetime-local" ng-model="iddeadline" class="form-control">
+               <input id="iddeadline" required type="datetime-local" ng-model="taskEdit.deadline" class="form-control">
             </div>
         </div>
       </form>
   </div>
   <div class="modal-footer model-grey-color">
-    <button class="btn btn-success" ng-click="addTask()" ng-disabled="!idtitle || !iddescription.length || iddeadline.$invalid"><i class="glyphicon glyphicon-floppy-save"></i> Save</button>
+    <button class="btn btn-success" ng-click="saveEdit()" ng-disabled="!taskEdit.title.length || !taskEdit.text.length"><i class="glyphicon glyphicon-floppy-save"></i> Save</button>
     <button class="btn btn-danger" ng-click="cancelModal()"><i class="glyphicon glyphicon-remove"></i> Close</button>
   </div>
 </div>
