--- a/webapp/templates/pages/modal-add-task.html
+++ b/webapp/templates/pages/modal-add-task.html
@@ -11,38 +11,36 @@
               <div class="form-group">
                   <label class="col-sm-3 control-label">Title</label>
                   <div class="col-sm-8">
-                      <input type="text" id="idtitle" required name="idtitle" ng-model="idtitle" placeholder="--Insert a Title--" class="form-control">
+                      <input type="text" id="idtitle" required name="idtitle" maxlength="200" ng-model="AddObjJson.title" placeholder="--Insert a Title--" class="form-control">
                   </div>
              </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Description</label>
                 <div class="col-sm-8">
-                   <input type="text" required  id="iddescription" ng-model="iddescription" ng-mi placeholder="--Insert a Description--" class="form-control">
+                   <input type="text" required  id="iddescription" maxlength="500" ng-model="AddObjJson.text" ng-mi placeholder="--Insert a Description--" class="form-control">
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Priority</label>
                 <div class="col-sm-8">
-                   <select id="idPriority" name="idPriority" ng-model="idPriority" required >
-                        <option value="" selected>--Please Select--</option>
-                       <option value="1" selected>Low</option>
-                       <option value="2" selected>Medium</option>
-                       <option value="3" selected>High</option>
-                       <option value="4" selected>Urgent</option>
-                   </select><br>
-                    <span>{{idPriority.id}}</span>
+                   <select id="taskEdit.priority" ng-model="AddObjJson.priority"
+                        ng-init="taskEdit.priority"
+                        name="taskEdit.priority"
+                        ng-options="prio.id as prio.name for prio in listPriority.availablePriority " >
+                    <option value="" selected>--Please Select--</option>
+                </select>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Deadline</label>
                 <div class="col-sm-8">
-                   <input id="iddeadline" required type="datetime-local" ng-model="iddeadline" class="form-control">
+                   <input id="iddeadline" required type="datetime-local" ng-model="AddObjJson.deadline" class="form-control">
                 </div>
             </div>
           </form>
       </div>
       <div class="modal-footer model-grey-color">
-        <button class="btn btn-success" ng-click="addTask()" ng-disabled="!idtitle || !iddescription.length || iddeadline.$invalid"><i class="glyphicon glyphicon-floppy-save"></i> Save</button>
+        <button class="btn btn-success" ng-click="addTask()" ng-disabled="!AddObjJson.title.length || !AddObjJson.text.length || AddObjJson.deadline.$invalid"><i class="glyphicon glyphicon-floppy-save"></i> Save</button>
         <button class="btn btn-danger" ng-click="cancelModal()"><i class="glyphicon glyphicon-remove"></i> Close</button>
       </div>
     </div>
