--- a/webapp/templates/pages/modal-edit-task.html
+++ b/webapp/templates/pages/modal-edit-task.html
@@ -3,43 +3,42 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancelModal()">
             <span aria-hidden="true">×</span>
         </button>
-        <h4 class="modal-title">New Task</h4>
+        <h4 class="modal-title">Edit Task</h4>
   </div>
   <div class="modal-body">
       <form class="form-horizontal" role="form">
           <div class="form-group">
               <label class="col-sm-3 control-label">Title</label>
               <div class="col-sm-8">
-                  <input type="text" id="title" required name="title" ng-model="taskEdit.title" class="form-control">
+                  <input type="text" id="title" required name="title" maxlength="200" ng-model="taskEdit.title" class="form-control">
               </div>
          </div>
         <div class="form-group">
             <label class="col-sm-3 control-label">Description</label>
             <div class="col-sm-8">
-               <input type="text" required id="text" ng-model="taskEdit.text" class="form-control">
+               <input type="text" required id="text" maxlength="500" ng-model="taskEdit.text" class="form-control">
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-3 control-label">Priority</label>
             <div class="col-sm-8">
-               <select id="idPriority" name="idPriority" ng-model="taskEdit.priority" required >
+                <select id="taskEdit.priority" ng-model="taskEdit.priority"
+                        ng-init="taskEdit.priority"
+                        name="taskEdit.priority"
+                        ng-options="prio.id as prio.name for prio in listPriority.availablePriority " >
                     <option value="" selected>--Please Select--</option>
-                   <option value="1" selected>Low</option>
-                   <option value="2" selected>Medium</option>
-                   <option value="3" selected>High</option>
-                   <option value="4" selected>Urgent</option>
-               </select><br>
+                </select>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-3 control-label">Status</label>
             <div class="col-sm-8">
-               <select id="status" name="status" ng-model="taskEdit.status" required >
-                   <option value="" selected>--Please Select--</option>
-                   <option value="1" selected>Open</option>
-                   <option value="2" selected>In Progress</option>
-                   <option value="3" selected>Finished</option>
-               </select><br>
+                <select id="taskEdit.status"
+                        ng-model="taskEdit.status"
+                        ng-selected="true"
+                        ng-options="stat.id as stat.name for stat in listStatus.availableStatus">
+                    <option value="" selected>--Please Select--</option>
+                </select>
             </div>
         </div>
         <div class="form-group">
