--- a/static/css/crowdcomms.css
+++ b/static/css/crowdcomms.css
@@ -41,6 +41,7 @@
   text-decoration: none;
   white-space: nowrap;
   color: #555;
+  touch-action: manipulation;
 
   background-color: #ddd;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255,255,255,1)), to(rgba(255,255,255,0)));
