--- a/webapp/templates/pages/modal-add-task.html
+++ b/webapp/templates/pages/modal-add-task.html
@@ -1,46 +1,34 @@
 
-    <div class="clearfix">
-        <div class="modal-header model-grey-color">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancelModal()">
-                <span aria-hidden="true">×</span>
-            </button>
-            <h4 class="modal-title">New Task</h4>
-      </div>
-      <div class="modal-body">
-          <form class="form-horizontal" role="form">
-              <div class="form-group">
-                  <label class="col-sm-3 control-label">Title</label>
-                  <div class="col-sm-8">
-                      <input type="text" id="idtitle" required name="idtitle" maxlength="200" ng-model="AddObjJson.title" placeholder="--Insert a Title--" class="form-control">
-                  </div>
-             </div>
-            <div class="form-group">
-                <label class="col-sm-3 control-label">Description</label>
-                <div class="col-sm-8">
-                   <input type="text" required  id="iddescription" maxlength="500" ng-model="AddObjJson.text" ng-mi placeholder="--Insert a Description--" class="form-control">
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-3 control-label">Priority</label>
-                <div class="col-sm-8">
-                   <select id="taskEdit.priority" ng-model="AddObjJson.priority"
-                        ng-init="taskEdit.priority"
-                        name="taskEdit.priority"
-                        ng-options="prio.id as prio.name for prio in listPriority.availablePriority " >
-                    <option value="" selected>--Please Select--</option>
-                </select>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-3 control-label">Deadline</label>
-                <div class="col-sm-8">
-                   <input id="iddeadline" required type="datetime-local" ng-model="AddObjJson.deadline" class="form-control">
-                </div>
-            </div>
-          </form>
-      </div>
-      <div class="modal-footer model-grey-color">
-        <button class="btn btn-success" ng-click="addTask()" ng-disabled="!AddObjJson.title.length || !AddObjJson.text.length || AddObjJson.deadline.$invalid"><i class="glyphicon glyphicon-floppy-save"></i> Save</button>
-        <button class="btn btn-danger" ng-click="cancelModal()"><i class="glyphicon glyphicon-remove"></i> Close</button>
-      </div>
+
+    <div class="wrapper">
+        <main>
+          <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+          <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+
+          <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+
+          <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis necessitatibus earum tenetur itaque</div>
+            <input type="text">
+        </main>
+        <div id="footer">
+            <p>&copy; 2018 SulmaxCP. All Rights Reserved.</p>
+        </div>
     </div>
